Fixed the scrolling on the overflows, products section and products-showcase sectio s section

--- a/CSS/Main css/main.css
+++ b/CSS/Main css/main.css
@@ -546,6 +546,11 @@ a:focus {
   color: var(--primary-700);
 }
 
+/* :focus {
+  outline: none;
+  border-bottom: 2px solid var(--dark-color);
+} */
+
 ul {
   list-style-type: none;
 }
@@ -579,7 +584,7 @@ input[type="date"] {
   border: none;
 }
 
-/* Prototype override */
+/* ========== Prototype override ========== */
 .p-no-width {
   max-width: 100%;
 }
